--- a/impulse/src/styles.css
+++ b/impulse/src/styles.css
@@ -44,4 +44,26 @@
     text-align: center;
     color: red;
   }
+  .App {
+    text-align: center;
+  }
+  
+  nav ul {
+    list-style-type: none;
+    padding: 0;
+  }
+  
+  nav ul li {
+    display: inline;
+    margin-right: 10px;
+  }
+  
+  nav ul li a {
+    text-decoration: none;
+    color: #333;
+  }
+  
+  nav ul li a:hover {
+    text-decoration: underline;
+  }
   
